--- a/src/shared/ui/SwitchLang/ui/SwitchLang.module.scss
+++ b/src/shared/ui/SwitchLang/ui/SwitchLang.module.scss
@@ -1,8 +1,8 @@
 .switchLangWrapper {
   display: inline-flex;
   position: relative;
-  border: 1.5px solid var(--base-border);
-  padding: 14px 20px;
+  border: 1px solid var(--base-border);
+  padding: 15px 20px;
   border-radius: var(--rounded);
   cursor: pointer;
 
@@ -12,14 +12,29 @@
       pointer-events: all;
       visibility: visible;
     }
+
+    .currentLang {
+      img {
+        transform: rotate(180deg);
+      }
+    }
+  }
+
+  .currentLang {
+    align-items: center;
+    gap: 7px;
+
+    img {
+      transform: rotate(0deg);
+      transition: transform 0.2s ease-in-out;
+    }
   }
 
   .langsWrapper {
     position: absolute;
     top: 100%;
     left: 0;
-    width: 120px;
-    overflow: hidden;
+    width: 150px;
     padding-top: 10px;
 
     opacity: 0;
@@ -36,11 +51,12 @@
       border-radius: var(--rounded);
       display: flex;
       flex-direction: column;
+      overflow: hidden;
 
       .lang {
         border-bottom: 1px solid var(--base-border);
         display: inline-flex;
-        padding: 8px 10px;
+        padding: 10px 12px;
         cursor: pointer;
 
         &:last-child {
