--- a/src/shared/ui/SwitchLang/ui/SwitchLang.module.scss
+++ b/src/shared/ui/SwitchLang/ui/SwitchLang.module.scss
@@ -63,7 +63,8 @@
           border: none;
         }
 
-        &:hover {
+        &:hover,
+        &.active {
           background-color: var(--base-bg);
         }
       }
