--- a/src/shared/ui/Logo/ui/Logo.module.scss
+++ b/src/shared/ui/Logo/ui/Logo.module.scss
@@ -1,8 +1,15 @@
 .logo {
   display: inline-flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
   width: 80px;
   height: 80px;
+
+  @media screen and (max-width: 768px) {
+    width: 60px;
+    height: 60px;
+  }
 
   .img {
     object-fit: cover;
