--- a/src/shared/ui/Button/ui/Button.module.scss
+++ b/src/shared/ui/Button/ui/Button.module.scss
@@ -1,4 +1,7 @@
 .btn {
+  text-align: center;
+  align-items: center;
+  justify-content: center;
   padding: 10px 20px;
   font-weight: 600;
   font-size: 15px;
