--- a/src/app/styles/reset/_reset.scss
+++ b/src/app/styles/reset/_reset.scss
@@ -22,3 +22,13 @@ button {
   display: inline-flex;
   font-family: var(--font-geist);
 }
+
+#wrapper-block-page {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+#main {
+  flex: 1;
+}
