--- a/src/shared/ui/SwitchLang/ui/SwitchLang.module.scss
+++ b/src/shared/ui/SwitchLang/ui/SwitchLang.module.scss
@@ -20,6 +20,19 @@
     }
   }
 
+  &.mobile {
+    width: 100%;
+
+    .currentLang {
+      width: 100%;
+      justify-content: space-between;
+    }
+
+    .langsWrapper {
+      width: 100%;
+    }
+  }
+
   .currentLang {
     align-items: center;
     gap: 7px;
