--- a/src/entities/About/ui/About.module.scss
+++ b/src/entities/About/ui/About.module.scss
@@ -1,3 +1,29 @@
 .section {
-  padding-block: 30px 0;
+  padding-block: 40px 0;
+
+  .content {
+    .mainImgWrapper {
+      display: flex;
+      height: 450px;
+      border-radius: var(--rounded);
+      overflow: hidden;
+      margin-bottom: 20px;
+
+      .img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
+    }
+
+    .textBlock {
+      text-align: center;
+      max-width: 800px;
+      width: 100%;
+      margin-inline: auto;
+      .title {
+        margin-bottom: 10px;
+      }
+    }
+  }
 }
