--- a/src/entities/About/ui/About.module.scss
+++ b/src/entities/About/ui/About.module.scss
@@ -9,10 +9,18 @@
       overflow: hidden;
       margin-bottom: 20px;
 
+      @media screen and (max-width: 768px) {
+        height: 300px;
+      }
+
       .img {
         width: 100%;
         height: 100%;
         object-fit: contain;
+
+        @media screen and (max-width: 768px) {
+          object-fit: cover;
+        }
       }
     }
 
