--- a/src/entities/About/ui/AboutSwiper/AboutSwiper.module.scss
+++ b/src/entities/About/ui/AboutSwiper/AboutSwiper.module.scss
@@ -20,4 +20,20 @@
       border-radius: 10px;
     }
   }
+
+  .btns {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 20px;
+
+    .btnLeft {
+      img {
+        transform: rotate(180deg);
+      }
+    }
+
+    .btnRight {
+    }
+  }
 }
