--- a/src/entities/About/ui/AboutSwiper/AboutSwiper.module.scss
+++ b/src/entities/About/ui/AboutSwiper/AboutSwiper.module.scss
@@ -32,5 +32,10 @@
         transform: rotate(180deg);
       }
     }
+
+    .btnNotActive {
+      cursor: not-allowed;
+      opacity: 0.7;
+    }
   }
 }
