--- a/src/entities/Product/ui/Product.module.scss
+++ b/src/entities/Product/ui/Product.module.scss
@@ -4,6 +4,12 @@
   border-radius: 15px;
   padding: 5px;
 
+  &:hover {
+    img {
+      transform: scale(1.1);
+    }
+  }
+
   .imgBlock {
     display: flex;
     border-radius: 10px;
@@ -14,6 +20,7 @@
       width: 100% !important;
       height: 100% !important;
       object-fit: cover;
+      transition: transform 0.3s ease-in-out;
     }
   }
 
