banner style fix

--- a/src/entities/Banner/ui/BannerSwiper/BannerSwiper.module.scss
+++ b/src/entities/Banner/ui/BannerSwiper/BannerSwiper.module.scss
@@ -19,16 +19,16 @@
       position: relative;
 
       .titleOne {
-        color: var(--primary-250);
+        color: var(--base-white);
       }
 
       .titleTwo {
-        color: var(--primary-300);
+        color: var(--base-white);
         margin-block: 10px;
       }
 
       .titleThree {
-        color: var(--gray-250);
+        color: var(--base-white);
         margin-bottom: 50px;
       }
 
