--- a/src/entities/Product/ui/Product.module.scss
+++ b/src/entities/Product/ui/Product.module.scss
@@ -3,6 +3,12 @@
   background-color: var(--base-white);
   border-radius: 15px;
   padding: 5px;
+  position: relative;
+
+  .link {
+    position: absolute;
+    inset: 0;
+  }
 
   &:hover {
     img {
