--- a/src/entities/CatalogProducts/ui/CatalogProducts.module.scss
+++ b/src/entities/CatalogProducts/ui/CatalogProducts.module.scss
@@ -1,3 +1,9 @@
 .section {
   padding-block: 50px;
+
+  .products {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    gap: 10px;
+  }
 }
