--- a/src/shared/ui/Button/ui/Button.module.scss
+++ b/src/shared/ui/Button/ui/Button.module.scss
@@ -6,6 +6,7 @@
   font-weight: 600;
   font-size: 15px;
   border-radius: var(--rounded);
+  border: 1px solid transparent;
   cursor: pointer;
   transition:
     background-color 0.2s ease-in-out,
