--- a/src/entities/Contact/ui/ContactSocial/ContactSocial.module.scss
+++ b/src/entities/Contact/ui/ContactSocial/ContactSocial.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 10px;
   max-width: 1200px;
   width: 100%;
   margin-inline: auto;
@@ -10,6 +11,8 @@
   @media (max-width: 768px) {
     flex-direction: column;
     margin-bottom: 30px;
+    width: 100%;
+    align-items: stretch;
   }
 
   .item {
@@ -23,6 +26,15 @@
       justify-content: center;
       padding: 12px;
       border-radius: var(--rounded);
+
+      @media screen and (max-width: 768px) {
+        padding: 8px;
+
+        .img {
+          width: 15px;
+          height: 15px;
+        }
+      }
     }
 
     .right {
