--- a/src/entities/CatalogProducts/ui/CatalogProducts.module.scss
+++ b/src/entities/CatalogProducts/ui/CatalogProducts.module.scss
@@ -1,9 +1,20 @@
 .section {
   padding-block: 50px;
 
-  .products {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-    gap: 10px;
+  .container {
+    display: flex;
+    flex-direction: column;
+
+    .products {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+      gap: 10px;
+      margin-bottom: 30px;
+    }
+
+    .loopBtn {
+      align-self: center;
+      gap: 5px;
+    }
   }
 }
