--- a/src/widgets/Header/ui/Header.module.scss
+++ b/src/widgets/Header/ui/Header.module.scss
@@ -6,6 +6,12 @@
   display: flex;
   align-items: center;
 
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
+
   .headerInner {
     display: flex;
     align-items: center;
