--- a/src/shared/ui/Drawer/ui/Drawer.module.scss
+++ b/src/shared/ui/Drawer/ui/Drawer.module.scss
@@ -9,7 +9,7 @@
   pointer-events: none;
 
   &.show {
-    z-index: 100;
+    z-index: var(--z-index-modal);
     opacity: 1;
     pointer-events: all;
 
