--- a/src/widgets/Footer/ui/Footer.module.scss
+++ b/src/widgets/Footer/ui/Footer.module.scss
@@ -2,7 +2,78 @@
   background-color: var(--primary-300);
   padding-block: 50px;
 
-  & > * {
-    color: var(--base-white);
+  .inner {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+      gap: 40px;
+    }
+
+    .left {
+      display: flex;
+      flex-direction: column;
+      gap: 7px;
+
+      .phone,
+      .email {
+        color: var(--base-white);
+      }
+
+      .address {
+        color: var(--primary-50);
+        font-weight: 500;
+      }
+    }
+    .right {
+      display: flex;
+      justify-content: space-between;
+      gap: 50px;
+
+      @media screen and (max-width: 768px) {
+        flex-direction: column;
+      }
+
+      .linksWrapper {
+        .topDesc {
+          margin-bottom: 20px;
+          color: var(--base-white);
+        }
+
+        .links {
+          display: flex;
+          flex-direction: column;
+          gap: 7px;
+
+          .link {
+            color: var(--base-white);
+            &:hover {
+              color: var(--primary-50);
+            }
+          }
+        }
+      }
+
+      .socialWrapper {
+        .topDesc {
+          margin-bottom: 20px;
+          color: var(--base-white);
+        }
+
+        .social {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+
+          .socialLink {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+          }
+        }
+      }
+    }
   }
 }
