--- a/src/entities/About/ui/About.module.scss
+++ b/src/entities/About/ui/About.module.scss
@@ -29,8 +29,35 @@
       max-width: 800px;
       width: 100%;
       margin-inline: auto;
+
       .title {
         margin-bottom: 10px;
+
+        @media screen and (max-width: 768px) {
+          display: none;
+        }
+      }
+
+      .titleMobile {
+        display: none;
+        margin-bottom: 10px;
+
+        @media screen and (max-width: 768px) {
+          display: block;
+        }
+      }
+
+      .desc {
+        @media screen and (max-width: 768px) {
+          display: none;
+        }
+      }
+
+      .descMobile {
+        display: none;
+        @media screen and (max-width: 768px) {
+          display: block;
+        }
       }
     }
   }
