--- a/src/entities/Reviews/ui/ReviewsSwiper/ReviewsSwiper.module.scss
+++ b/src/entities/Reviews/ui/ReviewsSwiper/ReviewsSwiper.module.scss
@@ -6,6 +6,8 @@
     background-color: var(--base-white);
     padding: 25px 20px;
     border: 1px solid var(--base-border);
+    position: relative;
+    overflow: hidden;
 
     .swiperItemInner {
       .descName {
