--- a/src/shared/ui/StarBall/ui/StarBall.module.scss
+++ b/src/shared/ui/StarBall/ui/StarBall.module.scss
@@ -12,9 +12,13 @@
 }
 
 .full {
-  background-color: gold;
+  background-color: var(--primary-150);
 }
 
 .half {
-  background: linear-gradient(90deg, gold 50%, var(--base-border) 50%);
+  background: linear-gradient(
+    90deg,
+    var(--primary-150) 50%,
+    var(--base-border) 50%
+  );
 }
