test catalog products

--- a/src/entities/CatalogProducts/ui/CatalogProducts.module.scss
+++ b/src/entities/CatalogProducts/ui/CatalogProducts.module.scss
@@ -12,9 +12,9 @@
       margin-bottom: 30px;
     }
 
-    .loopBtn {
-      align-self: center;
-      gap: 5px;
-    }
+    // .loopBtn {
+    //   align-self: center;
+    //   gap: 5px;
+    // }
   }
 }
