--- a/src/entities/CatalogDetail/ui/ThePriseCatalog/ThePriseCatalog.module.scss
+++ b/src/entities/CatalogDetail/ui/ThePriseCatalog/ThePriseCatalog.module.scss
@@ -45,7 +45,9 @@
           justify-content: center;
 
           @media screen and (max-width: 768px) {
-            width: 50px;
+            min-width: 50px;
+            max-width: 60px;
+            width: 100%;
             font-size: 18px;
             padding: 8px;
           }
