--- a/src/app/styles/var/_var.scss
+++ b/src/app/styles/var/_var.scss
@@ -38,6 +38,9 @@
   --gray-100: #909cb0;
   --gray-50: #bac1ce;
 
+  --danger: crimson;
+  --success: rgb(21, 190, 21);
+
   --rounded: 6px;
 
   --z-index-header: 100;
