--- a/src/entities/Product/ui/Product.module.scss
+++ b/src/entities/Product/ui/Product.module.scss
@@ -122,6 +122,11 @@
       @media screen and (max-width: 768px) {
         flex-direction: column;
       }
+
+      .btnBook {
+        position: relative;
+        z-index: 2;
+      }
     }
   }
 }
