--- a/src/shared/ui/Button/ui/Button.module.scss
+++ b/src/shared/ui/Button/ui/Button.module.scss
@@ -12,6 +12,11 @@
     background-color 0.2s ease-in-out,
     color 0.2s ease-in-out;
 
+  &:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+  }
+
   @media screen and (max-width: 768px) {
     padding: 10px 15px;
     font-weight: 500;
