--- a/src/entities/Banner/ui/BannerSwiper/BannerSwiper.module.scss
+++ b/src/entities/Banner/ui/BannerSwiper/BannerSwiper.module.scss
@@ -38,6 +38,15 @@
         justify-content: center;
         gap: 10px;
 
+        .btn {
+          position: relative;
+
+          .btnLink {
+            position: absolute;
+            inset: 0;
+          }
+        }
+
         @media screen and (max-width: 768px) {
           flex-direction: column;
 
