--- a/src/features/FormPost/ui/BookingForm/BookingForm.module.scss
+++ b/src/features/FormPost/ui/BookingForm/BookingForm.module.scss
@@ -19,12 +19,11 @@
   .inner {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 10px;
+    gap: 20px;
     margin-bottom: 30px;
 
     @media screen and (max-width: 768px) {
       grid-template-columns: 1fr;
-      gap: 20px;
     }
 
     .textarea {
@@ -36,25 +35,33 @@
       }
     }
 
-    .countWrapper {
-      display: flex;
-      gap: 10px;
-
-      .inputCount {
-        flex: 1;
+    .countWrapperBlock {
+      .labelSpan {
+        font-size: 15px;
+        color: var(--primary-300);
+        margin-bottom: 5px;
       }
 
-      .btn {
-        padding: 10px;
-        width: 40px;
-        height: 40px;
+      .countWrapper {
+        display: flex;
+        gap: 10px;
 
-        &.btnMinus {
-          background-color: var(--primary-50);
+        .inputCount {
+          flex: 1;
         }
 
-        &.btnPlus {
-          background-color: var(--primary-300);
+        .btn {
+          padding: 10px;
+          width: 40px;
+          height: 40px;
+
+          &.btnMinus {
+            background-color: var(--primary-50);
+          }
+
+          &.btnPlus {
+            background-color: var(--primary-300);
+          }
         }
       }
     }
