--- a/src/shared/ui/InputPhone/ui/InputPhone.module.scss
+++ b/src/shared/ui/InputPhone/ui/InputPhone.module.scss
@@ -1,4 +1,14 @@
 .wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+
+  .label {
+    font-size: 15px;
+    color: var(--primary-300);
+    cursor: pointer;
+  }
+
   .inputBlock {
     position: relative;
 
