--- a/src/shared/ui/Select/ui/Select.module.scss
+++ b/src/shared/ui/Select/ui/Select.module.scss
@@ -6,13 +6,11 @@
   .label {
     font-size: 15px;
     color: var(--primary-300);
-    cursor: pointer;
   }
 
-  .textarea {
+  .select {
     display: block;
     width: 100%;
-    height: 100%;
     background-color: var(--base-white);
     padding: 10px;
     border: 1px solid var(--base-border);
@@ -21,13 +19,12 @@
     font-family: var(--font-geist);
     font-size: 14px;
     font-weight: 500;
-    resize: vertical;
 
     &::placeholder {
       color: var(--gray-300);
     }
 
-    &.errorTextarea {
+    &.errorSelect {
       border-color: var(--danger);
     }
   }
