--- a/src/entities/Contact/ui/ContactSocial/ContactSocial.module.scss
+++ b/src/entities/Contact/ui/ContactSocial/ContactSocial.module.scss
@@ -16,8 +16,21 @@
   .item {
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 10px;
     position: relative;
+    flex: 1;
+
+    @media screen and (max-width: 768px) {
+      justify-content: flex-start;
+      gap: 20px;
+      padding-bottom: 15px;
+      border-bottom: 1px solid var(--base-border);
+
+      &:last-child {
+        border: none;
+      }
+    }
 
     .link {
       position: absolute;
@@ -30,9 +43,19 @@
       justify-content: center;
       padding: 12px;
       border-radius: var(--rounded);
+      width: 42px;
+      height: 42px;
 
       &.map {
         background-color: var(--secondary-350);
+      }
+
+      &.whatsapp {
+        background-color: var(--primary-150);
+
+        .whatsappIcon {
+          font-size: 22px;
+        }
       }
 
       &.instagram {
@@ -55,8 +78,8 @@
         padding: 8px;
 
         .img {
-          width: 15px;
-          height: 15px;
+          width: 18px;
+          height: 18px;
         }
       }
     }
