--- a/src/entities/Product/ui/Product.module.scss
+++ b/src/entities/Product/ui/Product.module.scss
@@ -122,6 +122,7 @@
 
       @media screen and (max-width: 768px) {
         flex-direction: column;
+        align-items: stretch;
       }
 
       .btnBook {
