--- a/src/shared/ui/SectionBanner/ui/SectionBanner.module.scss
+++ b/src/shared/ui/SectionBanner/ui/SectionBanner.module.scss
@@ -1,24 +1,26 @@
-.section {
-  height: 50vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
+.swiperWrapper {
+  .item {
+    height: 80vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
 
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  clip-path: polygon(0 0, 100% 0, 100% 87%, 0% 100%);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    clip-path: polygon(0 0, 100% 0, 100% 87%, 0% 100%);
 
-  .inner {
-    text-align: center;
+    .inner {
+      text-align: center;
 
-    .title {
-      color: var(--base-white);
+      .title {
+        color: var(--base-white);
 
-      @media screen and (max-width: 768px) {
-        font-size: 30px;
+        @media screen and (max-width: 768px) {
+          font-size: 30px;
+        }
       }
     }
   }
