--- a/src/entities/CatalogProducts/ui/CategoryCatalog/CategoryCatalog.module.scss
+++ b/src/entities/CatalogProducts/ui/CategoryCatalog/CategoryCatalog.module.scss
@@ -7,6 +7,8 @@
 
   @media screen and (max-width: 768px) {
     margin-bottom: 25px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
   }
 
   .btn {
