--- a/src/widgets/Footer/ui/Footer.module.scss
+++ b/src/widgets/Footer/ui/Footer.module.scss
@@ -71,6 +71,15 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            border: 1px solid var(--gray-250);
+            padding: 10px;
+            border-radius: var(--rounded);
+
+            transition: background-color 0.2s ease-in-out;
+
+            &:hover {
+              background-color: var(--primary-400);
+            }
           }
         }
       }
