--- a/src/shared/ui/InputPhone/ui/InputPhone.module.scss
+++ b/src/shared/ui/InputPhone/ui/InputPhone.module.scss
@@ -12,21 +12,11 @@
   .inputBlock {
     position: relative;
 
-    .spanStartNumber {
-      position: absolute;
-      top: 49%;
-      transform: translateY(-49%);
-      left: 10px;
-      font-weight: 500;
-      font-size: 14px;
-      color: var(--gray-250);
-    }
-
     .input {
       display: block;
       width: 100%;
       background-color: var(--base-white);
-      padding: 10px 10px 10px 50px;
+      padding: 10px;
       border: 1px solid var(--base-border);
       border-radius: var(--rounded);
       color: var(--gray-250);
