fix box shadow NextTopLoader

--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -7,3 +7,22 @@ body {
   background-color: var(--base-bg);
   min-width: 370px;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--primary-50);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--primary-250);
+  border-radius: var(--rounded);
+  transition: background-color 0.2s ease-in-out;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--primary-300);
+}
