review detail tour form

--- a/src/app/styles/var/_var.scss
+++ b/src/app/styles/var/_var.scss
@@ -29,7 +29,7 @@
   --base-netural-white: rgba(255, 255, 255, 0.5);
   --base-black: #000;
   --base-netural-black: rgba(0, 0, 0, 0.5);
-  --base-border: #f2f3f4;
+  --base-border: #ececec;
   --base-bg: #fcfcfc;
 
   --gray-250: #3a4352;
